[package]
name = "extreme_bevy"
version = "0.1.0"
edition = "2024"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
bevy = "0.16"
bevy_ggrs = { version = "0.18", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.12", features = ["ggrs"] }
bevy_asset_loader = "0.23"
clap = { version = "4.5", features = ["derive"] }
bevy_roll_safe = "0.5"
bevy_egui = "0.34"
