[package]
name = "extreme_bevy"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 2

[dependencies]
bevy = "0.14"
bevy_ggrs = { version = "0.16", features = ["wasm-bindgen"] }
bevy_matchbox = { version = "0.10", features = ["ggrs"] }
bevy_asset_loader = "0.21"
clap = { version = "4.4", features = ["derive"] }
bevy_roll_safe = "0.3"
bevy_egui = "0.28"
rand = "0.8"
